// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/git getBranchFiles(branchName) detects changed files compared to current base branch 1`] = `
Array [
  "some-new-file",
]
`;

exports[`platform/git getCommitMessages() returns commit messages 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git getFileList() should exclude submodules 1`] = `
Array [
  ".gitmodules",
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`platform/git getFileList() should return the correct files 1`] = `
Array [
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`platform/git initRepo()) should fetch latest 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git initRepo()) should fetch latest 2`] = `
Array [
  "past message2",
  "master message",
]
`;

exports[`platform/git pushBranch() uses delete and push when invalidatePr() and gitDeleteBeforePush are truthy 1`] = `"ded4c0a"`;

exports[`platform/git pushBranch() uses force push when both invalidatePr() and gitDeleteBeforePush are falsy 1`] = `"813e9d1"`;

exports[`platform/git pushBranch() uses force push when invalidatePr() is falsy but gitDeleteBeforePush is truthy 1`] = `"c7ea11e"`;

exports[`platform/git pushBranch() uses force push when invalidatePr() is truthy but gitDeleteBeforePush is falsy 1`] = `"c7ea11e"`;
